--- a/team.html
+++ b/team.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Tekton Construction - Team Site</title>
+</head>
+<frameset cols="25%, 75%">
+    <frame src="nav.html" name="navFrame">
+    <frame src="home.html" name="mainFrame">
+</frameset>
+<noframes>
+    <body>Your browser does not support frames.</body>
+</noframes>
+</html>
