--- a/home.html
+++ b/home.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Tekton Construction - Home</title>
+</head>
+<body style="font-family: Arial, sans-serif;">
+    <h1>Welcome to Tekton Construction</h1>
+    <p><strong>Team Number:</strong> 7</p>
+    <p><strong>Team Members:</strong></p>
+    <ul>
+        <li>Advik Bablani</li>
+        <li>Siva Alluri</li>
+        <li>Lexi Aven</li>
+        <li>Adam Novelen</li>
+    </ul>
 
+    <p id="lastModified"></p>
+
+    <script>
+        document.getElementById("lastModified").innerHTML = 
+            "Date last modified: " + document.lastModified;
+    </script>
+</body>
+</html>
