--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Navigation</title>
+</head>
+<body style="font-family: Arial, sans-serif;">
+    <h3>Navigation</h3>
+    <ul>
+        <li><a href="https://github.com/advik-bablani.https://github.com/advik-bablani/Tekton_Construction" target="mainFrame">Company Story</a></li>
+        <li><a href="https://USERNAME2.github.io/REPO2" target="mainFrame">Management Team</a></li>
+        <li><a href="https://USERNAME3.github.io/REPO3" target="mainFrame">Products</a></li>
+        <li><a href="https://USERNAME4.github.io/REPO4" target="mainFrame">Services</a></li>
+        <li><a href="https://USERNAME5.github.io/REPO5" target="mainFrame">Testimonials</a></li>
+    </ul>
 
+    <p id="lastModified"></p>
+
+    <script>
+        document.getElementById("lastModified").innerHTML = 
+            "Date last modified: " + document.lastModified;
+    </script>
+</body>
+</html>
