--- a/nav.html
+++ b/nav.html
@@ -13,26 +13,18 @@
   </style>
 </head>
 <body>
-  <div class="brand">[Your Company Name]</div>
+  <div class="brand">[Tekton Construction]</div>
 
   <nav>
     <!-- Team landing page (loads on the right frame) -->
     <a href="home.html" target="content">🏠 Team Home</a>
 
-    <!-- Link each individual page below (target must be "content") -->
     <div class="section">Pages</div>
     <a href="https://alice.github.io/eloheh/about.html" target="content">Company Story & History</a>
     <a href="https://bob.github.io/eloheh/team.html" target="content">Management Team</a>
-    <a href="https://carol.github.io/eloheh/products.html" target="content">Products</a>
+    <a href="https://anovelen.github.io/Team-Project-MGMT-382/" target="content">Products</a>
     <a href="https://advik-bablani.github.io/Tekton_Construction/" target="content">Services</a>
     <a href="https://erin.github.io/eloheh/testimonials.html" target="content">Customer Testimonials</a>
-
-    <!-- Example external link (must NOT replace your site; use _blank) -->
-    <div class="section">External</div>
-    <a href="https://www.w3schools.com/html/" target="_blank" rel="noopener noreferrer">
-      HTML Reference (opens new tab)
-    </a>
-  </nav>
 
   <footer>
     Last modified: <span id="lm"></span>
