--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
         <h3>What Clients Say</h3>
         <blockquote class="small">
           “Tekton finished our renovation two weeks early and under budget. The site was immaculate and their PM
-          kept everyone informed.” — <strong>R. Patel, Facility Director</strong>
+          kept everyone informed.” — <strong>M. Blankenship, Facility Director</strong>
         </blockquote>
       </section>
 
