--- a/nav.html
+++ b/nav.html
@@ -24,7 +24,7 @@
     <a href="https://bob.github.io/eloheh/team.html" target="content">Management Team</a>
     <a href="https://anovelen.github.io/Team-Project-MGMT-382/" target="content">Products</a>
     <a href="https://advik-bablani.github.io/Tekton_Construction/" target="content">Services</a>
-    <a href="https://erin.github.io/eloheh/testimonials.html" target="content">Customer Testimonials</a>
+    <a href="https://tejasivasaialluri.github.io/" target="content">Customer Testimonials</a>
 
   <footer>
     Last modified: <span id="lm"></span>
