--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tekton Construction — Team Home</title>
+  <title>Tekton Construction — Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root{
@@ -66,7 +66,6 @@
       <div class="logo">T</div>
       <div class="title">
         <h1>Tekton Construction</h1>
-        <div class="sub">Team <strong>[Your Team #]</strong> · Systems &amp; Databases Project</div>
         <div class="badges">
           <span class="badge">General Contracting</span>
           <span class="badge">Design–Build</span>
@@ -111,19 +110,18 @@
       <aside class="card">
         <h3>Team Members</h3>
         <ul>
-          <li>Alexia — Story &amp; History</li>
-          <li>Alexia — Management Team</li>
-          <li>Adam — Products</li>
-          <li>Advik — Services</li>
-          <li>Siva — Testimonials</li>
+          <li>Alexia — Surveyor</li>
+          <li>Adam — Construction Manager</li>
+          <li>Advik — Civil Engineer</li>
+          <li>Siva — Architect</li>
         </ul>
 
         <div style="height:10px"></div>
         <h3>Quick Links</h3>
         <ul>
           <li><a href="home.html" target="content">Team Home</a></li>
-          <li><a href="mailto:info@tekton.example">Contact Us</a> <span class="pill">Email</span></li>
-          <li><a href="brochure.pdf" target="_blank">Download Company Brochure (PDF)</a></li>
+          <li><a href="mailto:info@tekton.com">Contact Us</a> <span class="pill">Email</span></li>
+          <li><a href="https://www.royalbuildingproducts.com/sites/rbp/files/2019-01/rbp_vinyl_consumer_product_brochure_us_2019.pdf.pdf" target="_blank">Download Company Brochure (PDF)</a></li>
         </ul>
       </aside>
     </div>
