--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -131,19 +131,10 @@
       <section class="card">
         <h3>What Clients Say</h3>
         <blockquote class="small">
-          “Tekton finished our renovation two weeks early and under budget. The site was immaculate and their PM
+          “Tekton finished our renovation two weeks early and under budget. The site was exceptional and their CM
           kept everyone informed.” — <strong>M. Blankenship, Facility Director</strong>
         </blockquote>
       </section>
-
-      <section class="card">
-        <h3>How to Navigate</h3>
-        <ol class="small">
-          <li>Use the left menu to open any page in this right frame.</li>
-          <li>External links open in a new tab so the frames stay intact.</li>
-        </ol>
-      </section>
-    </div>
 
     <footer>
       Last modified: <span id="lm"></span>
