--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,144 +6,217 @@ c<!DOCTYPE html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root{
-      --tan: #f5efe6;           
-      --tan-2:#efe7dc;          
-      --ink:#2b2b2b;            
-      --muted:#6b6b6b;          
-      --brand:#8b5e34;          
-      --brand-2:#a47148;        
-      --line:#e5d9c8;           
+      --tan:#f5efe6; --tan-2:#efe7dc; --ink:#2b2b2b; --muted:#6b6b6b;
+      --brand:#8b5e34; --brand-2:#a47148; --line:#e5d9c8; --white:#fff;
     }
-    html,body{margin:0;padding:0;background:var(--tan);color:var(--ink);font-family:Arial,Helvetica,sans-serif;line-height:1.55}
-    a{color:var(--brand);text-decoration:none}
-    a:hover{text-decoration:underline}
-    /* Header / hero */
-    .hero{
-      background: linear-gradient(180deg, rgba(139,94,52,0.06), rgba(139,94,52,0.0)),
-                  var(--tan);
-      padding: 28px 24px 22px 24px;
-      border-bottom: 1px solid var(--line);
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--tan);color:var(--ink);font-family:Arial,Helvetica,sans-serif;line-height:1.6}
+
+    /* Top nav (simple, clean) */
+    .nav{
+      position:sticky; top:0; z-index:50;
+      background:rgba(245,239,230,.94); backdrop-filter:saturate(140%) blur(6px);
+      border-bottom:1px solid var(--line);
     }
-    .brandrow{display:flex;gap:14px;align-items:center;flex-wrap:wrap}
+    .nav .inner{max-width:1100px;margin:0 auto;display:flex;align-items:center;gap:16px;padding:10px 18px}
     .logo{
-      width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--brand),var(--brand-2));
-      display:grid;place-items:center;color:white;font-weight:bold;font-size:22px;box-shadow:0 2px 8px rgba(0,0,0,.08)
+      width:40px;height:40px;border-radius:10px;
+      background:linear-gradient(135deg,var(--brand),var(--brand-2));
+      display:grid;place-items:center;color:#fff;font-weight:bold
     }
-    .title h1{margin:0;font-size:28px;letter-spacing:.2px}
-    .title .sub{margin-top:4px;color:var(--muted);font-size:14px}
-    .badges{margin-top:10px;display:flex;gap:8px;flex-wrap:wrap}
-    .badge{font-size:12px;padding:4px 10px;border-radius:999px;background:#fff1;border:1px solid var(--line)}
-    /* Content layout */
-    .wrap{max-width:980px;margin:18px auto 28px auto;padding:0 22px}
-    .grid{display:grid;grid-template-columns:1fr;gap:18px}
-    @media(min-width:860px){ .grid{grid-template-columns:1.2fr .8fr} }
-    .card{
-      background:var(--tan-2);border:1px solid var(--line);border-radius:14px;padding:16px;
-      box-shadow:0 1px 6px rgba(0,0,0,.05)
+    .brand{font-weight:700}
+    .spacer{flex:1}
+    .nav a{color:var(--ink);text-decoration:none;margin-left:14px;font-size:14px}
+    .nav a:hover{text-decoration:underline}
+
+    /* Hero with background image + overlay, like a real homepage */
+    .hero{
+      position:relative; color:#fff; min-height:280px;
+      display:grid; place-items:center; text-align:center;
+      background: #b58f6a url("hero.jpg") center/cover no-repeat; /* replace with your image */
     }
-    h3{margin:0 0 10px 0;font-size:18px}
-    .muted{color:var(--muted)}
-    ul,ol{margin:0 0 0 18px;padding:0}
+    .hero::after{
+      content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
+    }
+    .hero .content{position:relative; padding:56px 18px}
+    .hero h1{margin:0 0 8px 0; font-size:34px; letter-spacing:.3px}
+    .hero p{margin:0 auto 14px auto; max-width:720px}
     .cta{
-      display:inline-block;margin-top:10px;padding:8px 14px;border-radius:10px;background:var(--brand);
-      color:#fff;border:1px solid rgba(0,0,0,.05);text-decoration:none
+      display:inline-block; padding:10px 16px; border-radius:10px; background:var(--brand);
+      color:#fff; text-decoration:none; border:1px solid rgba(0,0,0,.08)
     }
     .cta:hover{filter:brightness(1.05)}
-    .split{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    @media(max-width:560px){ .split{grid-template-columns:1fr} }
-    blockquote{
-      margin:0;padding:10px 12px;border-left:4px solid var(--brand-2);background:#ffffff20;border-radius:8px
+
+    /* Sections */
+    .wrap{max-width:1100px;margin:0 auto;padding:26px 18px}
+    .section-title{font-size:22px;margin:0 0 12px 0}
+    .muted{color:var(--muted)}
+    .grid{display:grid; gap:16px}
+    .card{
+      background:var(--tan-2);
+      border:1px solid var(--line); border-radius:14px; padding:16px;
+      box-shadow:0 1px 6px rgba(0,0,0,.05)
     }
-    footer{margin:18px 0 8px 0;color:var(--muted);font-size:12px}
-    .small{font-size:12px}
-    .pill{display:inline-block;padding:2px 8px;border-radius:999px;background:#fff;border:1px solid var(--line);font-size:12px}
+    .services{grid-template-columns:1fr}
+    @media(min-width:900px){ .services{grid-template-columns:1fr 1fr 1fr} }
+
+    .service h3{margin:0 0 6px 0; font-size:18px}
+    .service ul{margin:8px 0 0 18px; padding:0}
+    .split{display:grid; gap:18px; grid-template-columns:1fr}
+    @media(min-width:900px){ .split{grid-template-columns:1.1fr .9fr} }
+
+    .badge{
+      display:inline-block; font-size:12px; padding:2px 8px; border-radius:999px;
+      background:#fff; border:1px solid var(--line); margin-right:6px; margin-top:6px
+    }
+
+    /* Testimonial band */
+    .band{
+      background:#eadfcf; border-top:1px solid var(--line); border-bottom:1px solid var(--line);
+      padding:22px 18px; margin:26px 0
+    }
+    blockquote{
+      margin:0; padding:10px 12px; border-left:4px solid var(--brand-2); background:#ffffff50; border-radius:8px
+    }
+
+    /* Footer */
+    footer{
+      border-top:1px solid var(--line); padding:16px 18px; background:var(--tan-2); color:var(--muted); font-size:12px
+    }
+    .links a{color:var(--brand); text-decoration:none}
+    .links a:hover{text-decoration:underline}
   </style>
 </head>
 <body>
-  <!-- HERO / HEADER -->
-  <header class="hero">
-    <div class="brandrow">
+
+  <!-- NAV -->
+  <div class="nav">
+    <div class="inner">
       <div class="logo">T</div>
-      <div class="title">
-        <h1>Tekton Construction</h1>
-        <div class="badges">
-          <span class="badge">General Contracting</span>
-          <span class="badge">Design–Build</span>
-          <span class="badge">Pre-Construction</span>
-          <span class="badge">Safety First</span>
-        </div>
-      </div>
+      <div class="brand">Tekton Construction</div>
+      <div class="spacer"></div>
+      <!-- These are anchors on this page; internal frame-safe -->
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#downloads">Downloads</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+
+  <!-- HERO -->
+  <header class="hero">
+    <div class="content">
+      <h1>Building on Time. Building with Care.</h1>
+      <p>General contracting, design–build, and maintenance for the Greater Indianapolis area—delivered safely, on schedule, and within budget.</p>
+      <a class="cta" href="https://www.osha.gov/" target="_blank" rel="noopener noreferrer">View Safety Standards (OSHA)</a>
     </div>
   </header>
 
-  <!-- MAIN CONTENT -->
-  <main class="wrap">
-    <div class="grid">
-      <!-- Left column -->
-      <section class="card">
-        <h3>Who We Are</h3>
-        <p>We deliver safe, on-time, and cost-effective building solutions for commercial and residential clients across the Greater Indianapolis area. Our team brings proven scheduling, quality management, and subcontractor coordination to every job.</p>
+  <!-- SERVICES -->
+  <section id="services" class="wrap">
+    <h2 class="section-title">Our Services</h2>
+    <p class="muted">From pre-construction to turnover, Tekton provides turnkey support.</p>
 
-        <div class="split" style="margin-top:10px">
-          <div class="card" style="padding:12px">
-            <h3 style="margin-bottom:6px">At a Glance</h3>
-            <ul class="small">
-              <li>Founded: <em>2014</em></li>
-              <li>Licensed &amp; insured · OSHA-aligned</li>
-              <li>Average project size: $250k–$3.2M</li>
-            </ul>
-          </div>
-          <div class="card" style="padding:12px">
-            <h3 style="margin-bottom:6px">Core Capabilities</h3>
-            <ul class="small">
-              <li>Tenant Improvements · Build-outs</li>
-              <li>Design-Build &amp; Value Engineering</li>
-              <li>Facility Maintenance Programs</li>
-            </ul>
-          </div>
-        </div>
-
-        <a class="cta" href="https://www.osha.gov/" target="_blank" rel="noopener noreferrer">Safety Standards (OSHA)</a>
-      </section>
-
-      <!-- Right column -->
-      <aside class="card">
-        <h3>Team Members</h3>
+    <div class="grid services">
+      <div class="card service">
+        <h3>Pre-Construction</h3>
+        <p>Early estimating and risk planning to set projects up for success.</p>
         <ul>
-          <li>Alexia — Surveyor</li>
-          <li>Adam — Construction Manager</li>
-          <li>Advik — Civil Engineer</li>
-          <li>Siva — Architect</li>
+          <li>Conceptual budgets</li>
+          <li>Scheduling & phasing</li>
+          <li>Value engineering</li>
         </ul>
-
-        <div style="height:10px"></div>
-        <h3>Quick Links</h3>
+      </div>
+      <div class="card service">
+        <h3>Design–Build</h3>
+        <p>Single-source delivery balancing cost, schedule, and quality.</p>
         <ul>
-          <li><a href="home.html" target="content">Team Home</a></li>
-          <li><a href="mailto:info@tekton.com">Contact Us</a> <span class="pill">Email</span></li>
-          <li><a href="https://www.royalbuildingproducts.com/sites/rbp/files/2019-01/rbp_vinyl_consumer_product_brochure_us_2019.pdf.pdf" target="_blank">Download Company Brochure (PDF)</a></li>
+          <li>Architect/engineer coordination</li>
+          <li>Permitting & compliance</li>
+          <li>Quality assurance plans</li>
         </ul>
-      </aside>
+      </div>
+      <div class="card service">
+        <h3>General Contracting</h3>
+        <p>Site supervision and subcontractor management from mobilization to close-out.</p>
+        <ul>
+          <li>Daily safety meetings</li>
+          <li>Progress reporting</li>
+          <li>Punchlist & turnover</li>
+        </ul>
+      </div>
     </div>
+  </section>
 
-    
-    <div class="grid" style="margin-top:18px">
-      <section class="card">
-        <h3>What Clients Say</h3>
-        <blockquote class="small">
-          “Tekton finished our renovation two weeks early and under budget. The site was exceptional and their CM
-          kept everyone informed.” — <strong>M. Blankenship, Facility Director</strong>
-        </blockquote>
-      </section>
+  <!-- ABOUT (two-column like a real homepage) -->
+  <section id="about" class="wrap">
+    <div class="split">
+      <div class="card">
+        <h2 class="section-title">About Tekton</h2>
+        <p>We’re a licensed, insured contractor focused on commercial build-outs and renovations. Our project managers coordinate closely with owners and design teams to minimize downtime and deliver predictable outcomes.</p>
+        <div>
+          <span class="badge">Licensed & Insured</span>
+          <span class="badge">OSHA-Aligned</span>
+          <span class="badge">Since 2014</span>
+        </div>
+      </div>
+      <div class="card">
+        <h2 class="section-title">At a Glance</h2>
+        <ul>
+          <li>Average project size: $250k–$3.2M</li>
+          <li>Core sectors: retail, office, light industrial</li>
+          <li>Self-perform: select carpentry & finishes</li>
+        </ul>
+        <ol>
+          <li>Plan with clarity</li>
+          <li>Build with safety</li>
+          <li>Deliver with transparency</li>
+        </ol>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-      Last modified: <span id="lm"></span>
-    </footer>
-  </main>
+  <!-- TESTIMONIAL BAND -->
+  <div class="band">
+    <div class="wrap">
+      <blockquote>
+        “Tekton finished our renovation two weeks early and under budget. The site was exceptional and their CM
+        kept everyone informed.” — <strong>M. Blankenship, Facility Director</strong>
+      </blockquote>
+    </div>
+  </div>
+
+  <!-- DOWNLOADS / QUICK LINKS -->
+  <section id="downloads" class="wrap">
+    <div class="card">
+      <h2 class="section-title">Downloads & Quick Links</h2>
+      <ul class="links">
+        <li><a href="brochure.pdf" target="_blank">Download Company Brochure (PDF)</a></li>
+        <li><a href="home.html" target="content">Team Home (reload in frame)</a></li>
+        <li><a href="mailto:info@tekton.com">Email: info@tekton.com</a></li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- CONTACT / FOOTER -->
+  <footer id="contact">
+    <div class="wrap">
+      <div style="display:grid; gap:10px; grid-template-columns:1fr">
+        <div>
+          <strong>Tekton Construction</strong><br>
+          Greater Indianapolis, IN<br>
+          <a href="mailto:info@tekton.com">info@tekton.com</a> · 
+          <a href="tel:+13175551234">(317) 555-1234</a>
+        </div>
+        <div>Last modified: <span id="lm"></span></div>
+      </div>
+    </div>
+  </footer>
 
   <script>
-    
+    // Auto-updating "date last modified" per assignment
     document.getElementById('lm').textContent = document.lastModified;
   </script>
 </body>
 </html>
+
