--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--tan);color:var(--ink);font-family:Arial,Helvetica,sans-serif;line-height:1.6}
 
-    /* Top nav (simple, clean) */
     .nav{
       position:sticky; top:0; z-index:50;
       background:rgba(245,239,230,.94); backdrop-filter:saturate(140%) blur(6px);
@@ -29,11 +28,10 @@
     .nav a{color:var(--ink);text-decoration:none;margin-left:14px;font-size:14px}
     .nav a:hover{text-decoration:underline}
 
-    /* Hero with background image + overlay, like a real homepage */
     .hero{
       position:relative; color:#fff; min-height:280px;
       display:grid; place-items:center; text-align:center;
-      background: #b58f6a url("hero.jpg") center/cover no-repeat; /* replace with your image */
+      background: #b58f6a url("hero.jpg") center/cover no-repeat; 
     }
     .hero::after{
       content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
