--- a/home.html
+++ b/home.html
@@ -161,8 +161,8 @@
       <div class="card">
         <h2 class="section-title">At a Glance</h2>
         <ul>
-          <li>Average project size: $250k–$3.2M</li>
-          <li>Core sectors: retail, office, light industrial</li>
+          <li>Average project size: $7k–$3.2M</li>
+          <li>Core sectors: From homes to retail to offices, we cover it all!</li>
           <li>Self-perform: select carpentry & finishes</li>
         </ul>
         <ol>
@@ -184,7 +184,6 @@
     </div>
   </div>
 
-  <!-- DOWNLOADS / QUICK LINKS -->
   <section id="downloads" class="wrap">
     <div class="card">
       <h2 class="section-title">Downloads & Quick Links</h2>
@@ -196,7 +195,6 @@
     </div>
   </section>
 
-  <!-- CONTACT / FOOTER -->
   <footer id="contact">
     <div class="wrap">
       <div style="display:grid; gap:10px; grid-template-columns:1fr">
@@ -212,7 +210,6 @@
   </footer>
 
   <script>
-    // Auto-updating "date last modified" per assignment
     document.getElementById('lm').textContent = document.lastModified;
   </script>
 </body>
