--- a/nav.html
+++ b/nav.html
@@ -13,11 +13,11 @@
   </style>
 </head>
 <body>
-  <div class="brand">[Tekton Construction]</div>
+  <div class="brand">Tekton Construction</div>
 
   <nav>
     <!-- Team landing page (loads on the right frame) -->
-    <a href="home.html" target="content">🏠 Team Home</a>
+    <a href="home.html" target="content">🏠 Home</a>
 
     <div class="section">Pages</div>
     <a href="https://alice.github.io/eloheh/about.html" target="content">Company Story & History</a>
@@ -31,7 +31,6 @@
   </footer>
 
   <script>
-    // Auto-fill “date last modified” (required)
     document.getElementById('lm').textContent = document.lastModified;
   </script>
 </body>
