--- a/home.html
+++ b/home.html
@@ -189,7 +189,7 @@
       <h2 class="section-title">Downloads & Quick Links</h2>
       <ul class="links">
         <li><a href="https://www.royalbuildingproducts.com/sites/rbp/files/2019-01/rbp_vinyl_consumer_product_brochure_us_2019.pdf.pdf" target="_blank">Download Company Brochure (PDF)</a></li>
-        <li><a href="home.html" target="content">Home (reload in frame)</a></li>
+        <li><a href="home.html" target="content">Home</a></li>
         <li><a href="mailto:info@tekton.com">Email: info@tekton.com</a></li>
       </ul>
     </div>
