--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
     .links a:hover{text-decoration:underline}
   </style>
 </head>
-<body>
+<body bgcolor="#D2B48C">
 
   <!-- NAV -->
   <div class="nav">
@@ -93,7 +93,6 @@
       <div class="logo">T</div>
       <div class="brand">Tekton Construction</div>
       <div class="spacer"></div>
-      <!-- These are anchors on this page; internal frame-safe -->
       <a href="#services">Services</a>
       <a href="#about">About</a>
       <a href="#downloads">Downloads</a>
@@ -146,7 +145,7 @@
     </div>
   </section>
 
-  <!-- ABOUT (two-column like a real homepage) -->
+  <!-- ABOUT -->
   <section id="about" class="wrap">
     <div class="split">
       <div class="card">
@@ -174,7 +173,7 @@
     </div>
   </section>
 
-  <!-- TESTIMONIAL BAND -->
+  <!-- TESTIMONIAL -->
   <div class="band">
     <div class="wrap">
       <blockquote>
@@ -184,6 +183,7 @@
     </div>
   </div>
 
+  <!-- DOWNLOADS -->
   <section id="downloads" class="wrap">
     <div class="card">
       <h2 class="section-title">Downloads & Quick Links</h2>
@@ -195,6 +195,7 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer id="contact">
     <div class="wrap">
       <div style="display:grid; gap:10px; grid-template-columns:1fr">
@@ -214,4 +215,5 @@
   </script>
 </body>
 </html>
+
 
