--- a/home.html
+++ b/home.html
@@ -65,10 +65,17 @@
         center/cover no-repeat;
     }
     .hero::after{
-      content:""; position:absolute; inset:0;
-      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
+  pointer-events:none;
     }
-    .hero .content{position:relative; padding:64px 18px}
+    .hero .content{
+  position: relative;
+  z-index: 1;          
+  padding: 64px 18px;
+}
     .hero h1{margin:0 0 8px 0; font-size:34px; letter-spacing:.3px}
     .hero p{margin:0 auto 14px auto; max-width:720px}
     .cta{
