--- a/home.html
+++ b/home.html
@@ -55,7 +55,6 @@
     }
     .nav a:hover{text-decoration:underline}
 
-    /* HERO with construction image */
     .hero{
       position:relative; color:#fff; min-height:320px;
       display:grid; place-items:center; text-align:center;
@@ -150,7 +149,6 @@
     </div>
   </div>
 
-  <!-- HERO -->
   <header class="hero">
     <div class="content">
       <h1>Building on Time. Building with Care.</h1>
@@ -159,10 +157,9 @@
     </div>
   </header>
 
-  <!-- SERVICES -->
   <section id="services" class="wrap">
     <h2 class="section-title">Our Services</h2>
-    <p class="muted">From pre-construction to turnover, Tekton provides turnkey support.</p>
+    <p class="muted">From pre-construction to turnover, Tekton provides top of the line support and service through every part of the process.</p>
 
     <div class="grid services">
       <div class="card service">
