--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@
     <div class="split">
       <div class="card">
         <h2 class="section-title">About Tekton</h2>
-        <p>We’re a licensed, insured contractor focused on commercial build-outs and renovations. Our project managers coordinate closely with owners and design teams to minimize downtime and deliver predictable outcomes.</p>
+        <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
         <div>
           <span class="badge">Licensed & Insured</span>
           <span class="badge">OSHA-Aligned</span>
@@ -207,7 +207,6 @@
       <div class="card">
         <h2 class="section-title">At a Glance</h2>
         <ul>
-          <li>Average project size: $7k–$3.2M</li>
           <li>Core sectors: From homes to retail to offices, we cover it all!</li>
           <li>Self-perform: select carpentry & finishes</li>
         </ul>
@@ -225,12 +224,11 @@
     <div class="wrap">
       <blockquote>
         “Tekton finished our renovation two weeks early and under budget. The site was exceptional and their CM
-        kept everyone informed.” — <strong>M. Blankenship, Facility Director</strong>
+        kept everyone informed.” — <strong>M. Blankenship, Proud Homeowner</strong>
       </blockquote>
     </div>
   </div>
 
-  <!-- DOWNLOADS -->
   <section id="downloads" class="wrap">
     <div class="card">
       <h2 class="section-title">Downloads & Quick Links</h2>
@@ -242,7 +240,6 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer id="contact">
     <div class="wrap">
       <div style="display:grid; gap:10px; grid-template-columns:1fr">
