--- a/home.html
+++ b/home.html
@@ -25,7 +25,6 @@
       line-height:1.6;
     }
 
-    /* NAV */
     .nav{
       position:sticky; top:0; z-index:50;
       background:var(--tan-2);
@@ -154,7 +153,7 @@
   </header>
 
   <section id="services" class="wrap">
-    <h2 class="section-title">Our Services</h2>
+    <h2 class="section-title">Our Process</h2>
     <p class="muted">From pre-construction to turnover, Tekton provides top of the line support and service through every part of the process.</p>
 
     <div class="grid services">
