--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
   <header class="hero">
     <div class="content">
       <h1>Building on Time. Building with Care.</h1>
-      <p>General contracting, design–build, and maintenance for the Greater Indianapolis area—delivered safely, on schedule, and within budget.</p>
+      <p>General contracting, design build, and maintenance for the Greater Indianapolis area delivered safely, on schedule, and within budget.</p>
       <a class="cta" href="https://www.osha.gov/" target="_blank" rel="noopener noreferrer">View Safety Standards (OSHA)</a>
     </div>
   </header>
@@ -191,7 +191,12 @@
     <div class="split">
       <div class="card">
         <h2 class="section-title">About Tekton</h2>
-        <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
+        <p>We’re a licensed, insured contractor focused on exterior improvement.
+        Our Team
+        Alexia: Surveyor
+        Advik: Civil Engineer
+        Adam: Construction Manager
+        Siva: Architect</p>
         <div>
           <span class="badge">Licensed & Insured</span>
           <span class="badge">OSHA-Aligned</span>
