--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
       </div>
       <div class="card service">
         <h3>Design–Build</h3>
-        <p>Single-source delivery balancing cost, schedule, and quality.</p>
+        <p>Single source delivery balancing cost, schedule, and quality.</p>
         <ul>
           <li>Architect/engineer coordination</li>
           <li>Permitting & compliance</li>
@@ -191,8 +191,9 @@
     <div class="split">
       <div class="card">
         <h2 class="section-title">About Tekton</h2>
-        <p>We’re a licensed, insured contractor focused on exterior improvement.
-        Our Team
+        <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
+        
+        </p>Our Team
         Alexia: Surveyor
         Advik: Civil Engineer
         Adam: Construction Manager
