--- a/home.html
+++ b/home.html
@@ -192,12 +192,13 @@
       <div class="card">
         <h2 class="section-title">About Tekton</h2>
         <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
-        
-        </p>Our Team
-        Alexia: Surveyor
-        Advik: Civil Engineer
-        Adam: Construction Manager
-        Siva: Architect</p>
+        <h3>Our Team</h3>
+<ul>
+  <li>Advik: Civil Engineer</li>
+  <li>Alexia: Surveyor</li>
+  <li>Adam: Construction Manager</li>
+  <li>Siva: Architect</li>
+</ul>
         <div>
           <span class="badge">Licensed & Insured</span>
           <span class="badge">OSHA-Aligned</span>
