--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tekton Construction — Home</title>
+  <title>Tekton Construction: Group 2 — Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root{
@@ -194,10 +194,10 @@
         <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
         <h3>Our Team</h3>
 <ul>
-  <li>Advik: Civil Engineer</li>
-  <li>Alexia: Surveyor</li>
-  <li>Adam: Construction Manager</li>
-  <li>Siva: Architect</li>
+  <li>Advik Bablani: CEO</li>
+  <li>Alexia Aven: COO</li>
+  <li>Adam Novelon: Director of Project Management</li>
+  <li>Siva Alluri: CFO</li>
 </ul>
         <div>
           <span class="badge">Licensed & Insured</span>
