--- a/nav.html
+++ b/nav.html
@@ -66,7 +66,7 @@
     <a href="home.html" target="content">Home</a>
 
     <div class="section">Pages</div>
-    <a href="https://lexiaven2.github.io/" target="content">Company Story & History</a>
+    <a href="https://advik-bablani.github.io/Company-History/" target="content">Company Story & History</a>
     <a href="https://anovelen.github.io/Team-Project-MGMT-382/" target="content">Products</a>
     <a href="https://advik-bablani.github.io/Tekton_Construction/" target="content">Services</a>
     <a href="https://tejasivasaialluri.github.io/" target="content">Customer Testimonials</a>
