--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@
   <li>Advik Bablani: CEO</li>
   <li>Alexia Aven: COO</li>
   <li>Adam Novelon: Director of Project Management</li>
-  <li>Siva Alluri: CFO</li>
+  <li>Tejasivasai Alluri: CFO</li>
 </ul>
         <div>
           <span class="badge">Licensed & Insured</span>
