--- a/home.html
+++ b/home.html
@@ -44,7 +44,17 @@
       background:linear-gradient(135deg,var(--brand),var(--brand-2));
       display:grid; place-items:center; color:#fff; font-weight:bold;
     }
-    .brand{font-weight:700}
+    .brand-container {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.2;
+    }
+    .brand {font-weight:700}
+    .group-subtitle {
+      font-size: 12px;
+      color: var(--muted);
+      font-weight: normal;
+    }
     .spacer{flex:1}
     .nav a{
       color:var(--ink);
@@ -63,17 +73,17 @@
         center/cover no-repeat;
     }
     .hero::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
-  pointer-events:none;
+      content:"";
+      position:absolute;
+      inset:0;
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
+      pointer-events:none;
     }
     .hero .content{
-  position: relative;
-  z-index: 1;          
-  padding: 64px 18px;
-}
+      position: relative;
+      z-index: 1;          
+      padding: 64px 18px;
+    }
     .hero h1{margin:0 0 8px 0; font-size:34px; letter-spacing:.3px}
     .hero p{margin:0 auto 14px auto; max-width:720px}
     .cta{
@@ -135,7 +145,10 @@
   <div class="nav">
     <div class="inner">
       <div class="logo">T</div>
-      <div class="brand">Tekton Construction</div>
+      <div class="brand-container">
+        <div class="brand">Tekton Construction</div>
+        <div class="group-subtitle">Group 2</div>
+      </div>
       <div class="spacer"></div>
       <a href="#services">Services</a>
       <a href="#about">About</a>
@@ -193,12 +206,12 @@
         <h2 class="section-title">About Tekton</h2>
         <p>We’re a licensed, insured contractor focused on exterior improvement.</p>
         <h3>Our Team</h3>
-<ul>
-  <li>Advik Bablani: CEO</li>
-  <li>Alexia Aven: COO</li>
-  <li>Adam Novelon: Director of Project Management</li>
-  <li>Tejasivasai Alluri: CFO</li>
-</ul>
+        <ul>
+          <li>Advik Bablani: CEO</li>
+          <li>Alexia Aven: COO</li>
+          <li>Adam Novelon: Director of Project Management</li>
+          <li>Tejasivasai Alluri: CFO</li>
+        </ul>
         <div>
           <span class="badge">Licensed & Insured</span>
           <span class="badge">OSHA-Aligned</span>
@@ -259,5 +272,6 @@
   </script>
 </body>
 </html>
+
 
 
